log/build_2025-02-13_10-29-06/robot_control/stderr.log
  File "/home/mo/Thesis/install/robot_control/lib/python3.8/site-packages/robot_control/scan_bar_horizontal_triangulation.py", line 22
    self.node_shutdown_flag =
                            ^
SyntaxError: invalid syntax

